samples/_failures_safe/1761633819_6c7818_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d478567.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_0d478567.c:135:15: error: expected ‘;’ at end of input
  135 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_0d478567.c:135:9: error: expected declaration or statement at end of input
  135 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_0d478567.c:135:9: error: expected declaration or statement at end of input
